Accordion Fixes (Spelling, Image, Scroll on mobile)

--- a/css/main.css
+++ b/css/main.css
@@ -221,16 +221,16 @@ main#content:after {
 .article-paragraph {
   color: #000;
 }
-.accordian {
+.accordion {
   box-shadow: 0 0 5px 0 #DDD;
 }
-.accordian-title {
+.accordion-title {
   width: 100%;
   height: 30px;
   background: #404040;
   display: inline-block;
 }
-.accordian-title-text {
+.accordion-title-text {
   display: inline-block;
   height: 30px;
   font-size: 12px;
@@ -243,7 +243,7 @@ main#content:after {
   width: 100%;
   margin-right: -30px;
 }
-.accordian-title-toggle {
+.accordion-title-toggle {
   width: 30px;
   height: 30px;
   border: none;
@@ -251,41 +251,37 @@ main#content:after {
   float: right;
   transition: background-position 0.5s linear;
 }
-.accordian-title.active {
+.accordion-title.active {
   background: #292929;
 }
-.accordian-title.active .accordian-title-text {
+.accordion-title.active .accordion-title-text {
   color: #FFF;
 }
-.accordian-title.active .accordian-title-toggle {
+.accordion-title.active .accordion-title-toggle {
   background-position: -30px 0px;
 }
-.accordian-detail {
+.accordion-detail {
   background: #FFF;
   height: 0px;
   overflow: hidden;
   transition: height 0.5s;
 }
-.accordian-detail.active {
+.accordion-detail.active {
   border: 1px solid #DDD;
   height: 240px;
 }
-.accordian-detail .accordian-paragraph {
+.accordion-detail .accordion-paragraph {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  padding: 30px 20px;]
+  padding: 30px 20px;
 }
-/* This would be enabled if the content might be taller than 240px
-   but is removed for a smoother effect.
-.accordian-detail.active .accordian-paragraph {
-  overflow: auto;
-}*/
-.accordian-detail .accordian-img {
+.accordion-detail .accordion-img {
   float: right;
   margin: 0 20px;
+  max-width: 33%;
 }
-.accordian-detail .accordian-img.left {
+.accordion-detail .accordion-img.left {
   float: left;
   margin: 0 20px;
 }
@@ -397,13 +393,17 @@ footer#footer .container {
     margin-bottom: 10px;
   }
 }
-@media only screen and (min-width: 320px) and (max-width : 768px) {
+@media only screen and (min-width : 320px) and (max-width : 768px) {
   .col-left,
   .col-right {
     width: 100%;
     max-width: 100%; 
     margin: 10px 0;
   }
+  .accordion-detail.active .accordion-paragraph {
+    overflow: auto;
+  }
+  .accordion-detail.active .accordion-paragraph::-webkit-scrollbar { display: none; }
 }
 @media only screen and (min-width : 768px) and (max-width : 1024px) {
   .container { max-width: 700px; }
